--- a/index.html
+++ b/index.html
@@ -176,16 +176,38 @@
     <!-- Resources Buttons - 2 Rows of 3 Buttons -->
     <div class="resources-container">
         <div class="resources-row">
-            <button class="resource-button"><img src="https://killionaire23.github.io/TMMobile/Credit.png" alt="Credit"></button>
-            <button class="resource-button"><img src="https://killionaire23.github.io/TMMobile/Steel.png" alt="Steel"></button>
-            <button class="resource-button"><img src="https://killionaire23.github.io/TMMobile/Titanium.png" alt="Titanium"></button>
+            <button class="resource-button">
+                <img src="https://killionaire23.github.io/TMMobile/Credit.png" alt="Credit">
+                <span id="creditCount">0</span>
+            </button>
+            <button class="resource-button">
+                <img src="https://killionaire23.github.io/TMMobile/Steel.png" alt="Steel">
+                <span id="steelCount">0</span>
+            </button>
+            <button class="resource-button">
+                <img src="https://killionaire23.github.io/TMMobile/Titanium.png" alt="Titanium">
+                <span id="titaniumCount">0</span>
+            </button>
         </div>
         <div class="resources-row">
-            <button class="resource-button"><img src="https://killionaire23.github.io/TMMobile/Plant.png" alt="Plant"></button>
-            <button class="resource-button"><img src="https://killionaire23.github.io/TMMobile/Energy.png" alt="Energy"></button>
-            <button class="resource-button"><img src="https://killionaire23.github.io/TMMobile/Heat.png" alt="Heat"></button>
+            <button class="resource-button">
+                <img src="https://killionaire23.github.io/TMMobile/Plant.png" alt="Plant">
+                <span id="plantCount">0</span>
+            </button>
+            <button class="resource-button">
+                <img src="https://killionaire23.github.io/TMMobile/Energy.png" alt="Energy">
+                <span id="energyCount">0</span>
+            </button>
+            <button class="resource-button">
+                <img src="https://killionaire23.github.io/TMMobile/Heat.png" alt="Heat">
+                <span id="heatCount">0</span>
+            </button>
         </div>
     </div>
+
+    <!-- Produce Button -->
+    <button class="produce-button">Produce</button>
+</div>
 
     <!-- Produce Button -->
     <button class="produce-button">Produce</button>
