--- a/index.html
+++ b/index.html
@@ -229,10 +229,8 @@
 </style>
 </head>
 <body>
-<h2>Standard Resources</h2>
-    
+<h2>Standard Resources and TR</h2>
     <!-- Terraforming Rating Button -->
-        <h2 class="terraforming-title">Terraforming Rating</h2>
         <button class="terraforming-button">
             <img src="https://killionaire23.github.io/TMMobile/TR.png" alt="TR">
             <span id="trCount">20</span> <!-- Initial value for Terraforming Rating -->
