--- a/index.html
+++ b/index.html
@@ -397,27 +397,7 @@
 </p>
 
 <script>
-    const tagCounts = { earth: 0, space: 0, animal: 0, plant: 0, building: 0, event: 0, science: 0, energy: 0, microbe: 0, jovian: 0, city: 0, venus: 0 };
-
-    function changeCount(tag, delta) {
-        if (!document.getElementById(`${tag}Count`)) {
-            console.warn(`Tag element for "${tag}" not found.`);
-            return; // Safely skip if the tag does not exist in the HTML
-        }
-        tagCounts[tag] += delta;
-        if (tagCounts[tag] < 0) { tagCounts[tag] = 0; }
-        document.getElementById(`${tag}Count`).innerText = tagCounts[tag];
-        saveGameState(); // Save after updating tag counts
-    }
-
-    let vpCount = 0;
-    function changeVP(delta) {
-        vpCount += delta;
-        if (vpCount < 0) { vpCount = 0; }
-        document.getElementById('vpNumber').innerText = vpCount;
-        saveGameState(); // Save after updating VP
-    }
-    let currentResource = '';
+let currentResource = '';
 
 function openModal(resource) {
     currentResource = resource; // Store the current resource being edited
@@ -437,8 +417,16 @@ function updateResource(delta) {
         count += delta;
         if (count < 0) count = 0; // Ensure count does not go below 0
         resourceCountElement.innerText = count;
+    }
+}
 
-        closeModal(); // Close modal after update
+function updateProduction(delta) {
+    if (currentResource) {
+        const productionCountElement = document.getElementById(`${currentResource}Production`);
+        let count = parseInt(productionCountElement.innerText);
+        count += delta;
+        if (currentResource !== 'credit' && count < 0) count = 0; // Ensure non-credit production doesn't go below 0
+        productionCountElement.innerText = count;
     }
 }
 
@@ -454,89 +442,22 @@ window.onclick = function(event) {
     }
 }
 
-    let cardsDatabase = [];
-
-    // Load JSON Data and handle any errors
-    async function loadJSONData() {
-        try {
-            console.log("Attempting to load JSON...");
-            const response = await fetch('Card_Database_with_Numbers.json');
-            if (!response.ok) {
-                throw new Error(`HTTP error! Status: ${response.status}`);
-            }
-            const data = await response.json();
-            cardsDatabase = data;
-            console.log("JSON Data Loaded Successfully:", cardsDatabase);
-        } catch (error) {
-            console.error("Error loading JSON:", error);
-            document.getElementById("cardDetails").innerHTML = "<p>Error loading card data. Check console for details.</p>";
-        }
-    }
-
-    // Search Card by Card Number and update VP and tags
-    function searchCard() {
-        const cardInput = document.getElementById('cardNumberInput').value.trim();
-        const isNumeric = /^\d+$/.test(cardInput);
-        const cardNumber = isNumeric ? parseInt(cardInput, 10) : cardInput;
-        const card = cardsDatabase.find(c => c['Card Number'] === cardNumber);
-
-        if (card) {
-            changeVP(Number(card.VP) || 0);
-            Object.keys(card).forEach(key => {
-                if (key.startsWith("Tag:") && card[key] === 1) {
-                    const tag = key.replace("Tag: ", "").toLowerCase();
-                    changeCount(tag, 1);
-                }
-            });
-
-            document.getElementById("cardDetails").innerHTML = `<p>Found card: ${card['Card Name']} with VP: ${card.VP}</p>`;
-            console.log("Card found:", card); 
+function produceResources() {
+    const resources = ['credit', 'steel', 'titanium', 'plant', 'energy', 'heat'];
+    resources.forEach(resource => {
+        const resourceCountElement = document.getElementById(`${resource}Count`);
+        const productionCountElement = document.getElementById(`${resource}Production`);
+        let resourceCount = parseInt(resourceCountElement.innerText);
+        let productionCount = parseInt(productionCountElement.innerText);
+        if (resource === 'credit') {
+            let trCount = parseInt(document.getElementById('trCount').innerText);
+            resourceCount += productionCount + trCount;
         } else {
-            document.getElementById("cardDetails").innerHTML = "<p>Card not found. Please try a different number.</p>";
-            console.log("Card not found:", cardInput); 
+            resourceCount += productionCount;
         }
-    }
-
-    // Save game state to local storage
-    function saveGameState() {
-        const gameState = {
-            vpCount,
-            tagCounts
-        };
-        localStorage.setItem('terraformingMarsGameState', JSON.stringify(gameState));
-    }
-
-    // Load game state from local storage
-    function loadGameState() {
-        const savedState = localStorage.getItem('terraformingMarsGameState');
-        if (savedState) {
-            const gameState = JSON.parse(savedState);
-            vpCount = gameState.vpCount || 0;
-            document.getElementById('vpNumber').innerText = vpCount;
-
-            Object.keys(gameState.tagCounts).forEach(tag => {
-                tagCounts[tag] = gameState.tagCounts[tag];
-                document.getElementById(`${tag}Count`).innerText = tagCounts[tag];
-            });
-        }
-    }
-
-    // Reset game state
-    function resetGameState() {
-        vpCount = 0;
-        Object.keys(tagCounts).forEach(tag => {
-            tagCounts[tag] = 0;
-            document.getElementById(`${tag}Count`).innerText = tagCounts[tag];
-        });
-        document.getElementById('vpNumber').innerText = vpCount;
-        localStorage.removeItem('terraformingMarsGameState'); // Clear saved state
-    }
-
-    // Load JSON and game state on Page Load
-    document.addEventListener("DOMContentLoaded", () => {
-        loadJSONData();
-        loadGameState();
+        resourceCountElement.innerText = resourceCount;
     });
+}
 </script>
     <!-- Personal Introduction Text Box -->
 <div id="personalIntro" style="margin-top: 0px; padding: 10px; background: linear-gradient(45deg, rgba(0, 0, 0, 0.8), rgba(245, 126, 55, 0.8)); color: #000000; max-width: 800px; margin-left: auto; margin-right: auto; border-radius: 15px; box-shadow: 0 0px 30px rgba(0, 0, 0, 1); border: 3px solid black;">
