--- a/index.html
+++ b/index.html
@@ -298,12 +298,12 @@
         <div class="resources-row">
             <button class="resource-button" onclick="openModal('plant')">
                 <img class="resource-icon" src="https://killionaire23.github.io/TMMobile/Plant.png" alt="Plant">
-                <span id="plantCount">0</span>
+                <span id="plantresourceCount">0</span>
                 <span class="production-count" id="plantProduction">0</span>
             </button>
             <button class="resource-button" onclick="openModal('energy')">
                 <img class="resource-icon" src="https://killionaire23.github.io/TMMobile/Energy.png" alt="Energy">
-                <span id="energyCount">0</span>
+                <span id="energyresourceCount">0</span>
                 <span class="production-count" id="energyProduction">0</span>
             </button>
             <button class="resource-button" onclick="openModal('heat')">
