--- a/index.html
+++ b/index.html
@@ -168,9 +168,9 @@
 
 /* Terraforming Rating Button */
 .terraforming-button {
-    max-width: 800px; /* Match the container width */
-    margin: 0 auto; /* Center the buttons */
-    padding: 20px;
+    max-width: 800px;  /* Match the container width */
+    margin: 0 auto;    /* Center the button horizontally */
+    padding: 20px;     /* Keep the padding as it is to maintain height */
     font-size: 1.5em;
     border: 1px solid #000000;
     background-color: #e6e3e3;
@@ -251,10 +251,9 @@
 
 /* Produce Button */
 .produce-button {
-    margin-top: 20px;
-    max-width: 800px; /* Match the container width */
-    margin: 0 auto; /* Center the buttons */
-    padding: 10px;
+    max-width: 800px;  /* Match the container width */
+    margin: 0 auto;    /* Center the button horizontally */
+    padding: 10px;     /* Keep the padding as it is to adjust the height */
     font-size: 1.2em;
     border: 1px solid #000000;
     background-color: #e6e3e3;
