--- a/index.html
+++ b/index.html
@@ -168,9 +168,9 @@
 
 /* Terraforming Rating Button */
 .terraforming-button {
-    flex: 1;  /* Make it the same width as the resource buttons */
+    max-width: 800px; /* Match the container width */
+    margin: 0 auto; /* Center the buttons */
     padding: 20px;
-    margin: 0 5px; /* Consistent margin with resource buttons */
     font-size: 1.5em;
     border: 1px solid #000000;
     background-color: #e6e3e3;
@@ -251,9 +251,10 @@
 
 /* Produce Button */
 .produce-button {
-    flex: 1;  /* Make it the same width as the resource buttons */
+    margin-top: 20px;
+    max-width: 800px; /* Match the container width */
+    margin: 0 auto; /* Center the buttons */
     padding: 10px;
-    margin: 0 5px; /* Consistent margin with resource buttons */
     font-size: 1.2em;
     border: 1px solid #000000;
     background-color: #e6e3e3;
@@ -295,11 +296,6 @@
                 <span id="titaniumCount">0</span>
                 <span class="production-count" id="titaniumProduction">0</span>
             </button>
-            <button class="terraforming-button">
-                <img src="https://killionaire23.github.io/TMMobile/TR.png" alt="TR">
-                <span id="trCount">20</span> <!-- Initial value for Terraforming Rating -->
-            </button>
-            <button class="produce-button">Produce</button>
         </div>
         <div class="resources-row">
             <button class="resource-button" onclick="openModal('plant')">
