--- a/index.html
+++ b/index.html
@@ -326,7 +326,8 @@
 </div>
 
     <!-- Produce Button -->
-    <button class="produce-button" onclick="produceResources()">Produce</button>
+    <div class="produce-container full-width">
+    <button class="produce-button">Produce</button>
 </div>
      <!-- Modal for Add/Remove Options -->
 <div id="resourceModal" class="modal">
