--- a/index.html
+++ b/index.html
@@ -313,11 +313,12 @@
     <span class="production-count" id="plantResourceProduction">0</span> <!-- Corrected ID -->
 </button>
 
-        <button class="resource-button" onclick="openModal('energy')">
-            <img class="resource-icon" src="https://killionaire23.github.io/TMMobile/Energy.png" alt="Energy">
-            <span id="energyresourceCount">0</span>
-            <span class="production-count" id="energyProduction">0</span>
-        </button>
+        <button class="resource-button" onclick="openModal('energyResource')">
+    <img class="resource-icon" src="https://killionaire23.github.io/TMMobile/Energy.png" alt="Energy">
+    <span id="energyResourceCount">0</span>  <!-- Corrected ID -->
+    <span class="production-count" id="energyResourceProduction">0</span> <!-- Corrected ID -->
+</button>
+
         <button class="resource-button" onclick="openModal('heat')">
             <img class="resource-icon" src="https://killionaire23.github.io/TMMobile/Heat.png" alt="Heat">
             <span id="heatCount">0</span>
