--- a/index.html
+++ b/index.html
@@ -9,6 +9,29 @@
      button.increment {
           margin-right: 0px; /* Adds space between + and - buttons */
      }
+     /* Modal Sections for Resource and Production */
+.modal-section {
+    margin: 20px 0;
+}
+
+.value-controls {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 10px;
+}
+
+.value-controls span {
+    font-size: 1.5em;
+    font-weight: bold;
+}
+
+.value-controls button {
+    padding: 5px 10px;
+    font-size: 1.2em;
+    cursor: pointer;
+}
+
      /* Modal styles */
 .modal {
     display: none; /* Hidden by default */
@@ -338,15 +361,25 @@
         <h2>Update Resource</h2>
         <p id="modalResourceName">Resource: Credit</p>
         
-        <!-- Update Resource Count -->
-        <h3>Update Resource Value</h3>
-        <button onclick="updateResource(1)">Add Resource</button>
-        <button onclick="updateResource(-1)">Remove Resource</button>
+        <!-- Resource Count Section -->
+        <div class="modal-section">
+            <h3>Resource Value</h3>
+            <div class="value-controls">
+                <span id="modalResourceValue">0</span> <!-- Display resource value -->
+                <button onclick="updateResource(1)">+</button>
+                <button onclick="updateResource(-1)">-</button>
+            </div>
+        </div>
         
-        <!-- Update Production Count -->
-        <h3>Update Production Value</h3>
-        <button onclick="updateProduction(1)">Add Production</button>
-        <button onclick="updateProduction(-1)">Remove Production</button>
+        <!-- Production Count Section (not shown for TR) -->
+        <div id="productionSection" class="modal-section">
+            <h3>Production Value</h3>
+            <div class="value-controls">
+                <span id="modalProductionValue">0</span> <!-- Display production value -->
+                <button onclick="updateProduction(1)">+</button>
+                <button onclick="updateProduction(-1)">-</button>
+            </div>
+        </div>
     </div>
 </div>
 
@@ -443,7 +476,22 @@
 
 function openModal(resource) {
     currentResource = resource; // Store the current resource being edited
+    const resourceCountElement = document.getElementById(`${currentResource}Count`);
+    const productionCountElement = document.getElementById(`${currentResource}Production`);
+
+    // Update the modal with current values
     document.getElementById('modalResourceName').innerText = `Resource: ${capitalizeFirstLetter(resource)}`;
+    document.getElementById('modalResourceValue').innerText = resourceCountElement.innerText;
+
+    // If the resource is "tr", hide production section, otherwise show it
+    if (currentResource === 'tr') {
+        document.getElementById('productionSection').style.display = 'none';
+    } else {
+        document.getElementById('productionSection').style.display = 'block';
+        document.getElementById('modalProductionValue').innerText = productionCountElement ? productionCountElement.innerText : '0';
+    }
+
+    // Display the modal
     document.getElementById('resourceModal').style.display = "block";
 }
 
@@ -455,14 +503,13 @@ function closeModal() {
 function updateResource(delta) {
     if (currentResource) {
         const resourceCountElement = document.getElementById(`${currentResource}Count`);
-        if (!resourceCountElement) {
-            console.error(`Resource count element for "${currentResource}" not found.`);
-            return;
-        }
         let count = parseInt(resourceCountElement.innerText);
         count += delta;
         if (count < 0) count = 0; // Ensure count does not go below 0
         resourceCountElement.innerText = count;
+
+        // Update the modal value as well
+        document.getElementById('modalResourceValue').innerText = count;
     }
 }
 
@@ -530,13 +577,10 @@ window.onclick = function(event) {
         localStorage.setItem('terraformingMarsGameState', JSON.stringify(gameState));
     }
      // Function to update the production value
+
 function updateProduction(delta) {
-    if (currentResource) {
+    if (currentResource && currentResource !== 'tr') {
         const productionCountElement = document.getElementById(`${currentResource}Production`);
-        if (!productionCountElement) {
-            console.error(`Production count element for "${currentResource}" not found.`);
-            return;
-        }
         let production = parseInt(productionCountElement.innerText);
         production += delta;
 
@@ -546,6 +590,9 @@ function updateProduction(delta) {
         }
 
         productionCountElement.innerText = production;
+
+        // Update the modal value as well
+        document.getElementById('modalProductionValue').innerText = production;
     }
 }
 
