--- a/index.html
+++ b/index.html
@@ -329,7 +329,7 @@
 
     <!-- Produce Button -->
     <div class="produce-container full-width">
-    <button class="produce-button">Produce</button>
+    <button class="produce-button" onclick="produceResources()">Produce</button>
 </div>
      <!-- Modal for Add/Remove Options -->
 <div id="resourceModal" class="modal">
