--- a/index.html
+++ b/index.html
@@ -307,17 +307,17 @@
         </button>
     </div>
     <div class="resources-row">
-        <button class="resource-button" onclick="openModal('plantResource')">
-    <img class="resource-icon" src="https://killionaire23.github.io/TMMobile/Plant.png" alt="Plant">
-    <span id="plantResourceCount">0</span>  <!-- Corrected ID -->
-    <span class="production-count" id="plantResourceProduction">0</span> <!-- Corrected ID -->
-</button>
+        <button class="resource-button" onclick="openModal('plant')">
+            <img class="resource-icon" src="https://killionaire23.github.io/TMMobile/Plant.png" alt="Plant">
+            <span id="plantCount">0</span>  <!-- Corrected ID -->
+            <span class="production-count" id="plantProduction">0</span> <!-- Corrected ID -->
+        </button>
 
-        <button class="resource-button" onclick="openModal('energyResource')">
-    <img class="resource-icon" src="https://killionaire23.github.io/TMMobile/Energy.png" alt="Energy">
-    <span id="energyResourceCount">0</span>  <!-- Corrected ID -->
-    <span class="production-count" id="energyResourceProduction">0</span> <!-- Corrected ID -->
-</button>
+        <button class="resource-button" onclick="openModal('energy')">
+            <img class="resource-icon" src="https://killionaire23.github.io/TMMobile/Energy.png" alt="Energy">
+            <span id="energyCount">0</span>  <!-- Corrected ID -->
+            <span class="production-count" id="energyProduction">0</span> <!-- Corrected ID -->
+        </button>
 
         <button class="resource-button" onclick="openModal('heat')">
             <img class="resource-icon" src="https://killionaire23.github.io/TMMobile/Heat.png" alt="Heat">
@@ -326,6 +326,7 @@
         </button>
     </div>
 </div>
+
 
     <!-- Produce Button -->
     <div class="produce-container full-width">
